# inventory-management

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: customer.py  order.py  product.py
backend/app/routers/: customers.py  dashboard.py  orders.py  products.py
backend/app/schemas/: customer.py  dashboard.py  order.py  product.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/pages/: Customers.jsx  Dashboard.jsx  Orders.jsx  Products.jsx
